<resources>
    <string name="app_name">LeagueOfLegendsKotlin</string>
    <string name="Title_leagueoflegends">LeagueOfLegends\nChampions</string>
    <string name="information">
        Your password should have a minimum of 8
        Characters and contain at least one number,
        one uppercase and one lower case letter. You can use special characters
    </string>
    <string name="account_already_exists">An Account already exists with this email address</string>
    <string name="erroricon">ErrorIcon</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email_address">Email Address</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already Have Account? <u>LOGIN HERE</u></string>
    <string name="login">Login</string>
    <string name="new_here">New here? <u>REGISTER</u></string>
    <string name="dropdownmenu">DropDownMenu</string>
    <string name="backbutton">BackButton</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="champion_avatar">Champion Avatar</string>
    <string name="champion_title">Champion Title</string>
    <string name="champion_name">Champion Name</string>
    <string name="value">Value</string>
    <string name="style">Style</string>
    <string name="stats">Stats</string>
    <string name="name_title">Name - Title</string>
    <string name="returnButton">Return</string>
    <string name="health">Health:</string>
    <string name="mana">Mana:</string>
    <string name="armor">Armor:</string>
    <string name="magic_resist">Magic Resist:</string>
    <string name="move_speed">Move Speed:</string>
    <string name="attack_damage">Attack Damage:</string>
    <string name="attack_range">Attack Range:</string>
    <string name="attack_speed">Attack Speed:</string>
    <string name="per_level_increase">Per Level Increase</string>
    <string name="None">-</string>
    <string name="new_password">New Password:</string>
    <string name="title_activity_account_modify">AccountModifyActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="champion_description">Champion Description</string>
    <string name="text_size">Text Size</string>
    <string name="example_text_akali">Example Text: AKALI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testAccountString">test@gmail.com</string>
    <string name="testPassString">Password123</string>
    <string name="bottomInfo">Logged in as:</string>

</resources>