<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/champion_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/champion_avatar" />

    <TextView
        android:id="@+id/champion_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/champion_name"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/champion_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/champion_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        android:text="@string/champion_title"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/champion_avatar"
        app:layout_constraintTop_toBottomOf="@id/champion_name" />

    <TextView
        android:id="@+id/champion_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        android:text="@string/champion_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/champion_avatar"
        app:layout_constraintTop_toBottomOf="@id/champion_title" />

</androidx.constraintlayout.widget.ConstraintLayout>