<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <RelativeLayout
        android:id="@+id/page_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/standard_page_margin"
        android:paddingRight="@dimen/standard_page_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/email_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/email_address">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Login_Email_Box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_address_tv"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Login_Email_Et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_dim"
                android:text="@string/testAccountString"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Login_Email_Box"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/Login_passwordBox"
            app:layout_constraintStart_toStartOf="parent">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Login_passwordBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Login_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:placeholderText="See Criteria Below">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Login_Password_Et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_dim"
                android:inputType="textPassword"
                android:text="@string/testPassString"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/alreadyHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_content">
    </Button>


    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/new_here"
        android:textColor="@color/Gold"
        android:fontFamily="@font/optimus_princeps_semibold"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>