<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <RelativeLayout
        android:id="@+id/page_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/standard_page_margin"
        android:paddingRight="@dimen/standard_page_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/register_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/email_address">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_email_tv"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_dim"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/register_error_frame_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_email_box"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/register_error_text_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/account_already_exists"
                android:textSize="@dimen/ErrorText">
            </TextView>
        </RelativeLayout>

        <TextView
            android:id="@+id/create_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_error_frame_email"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/create_password_edit_Box"
            app:layout_constraintStart_toStartOf="parent">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_password_edit_Box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:placeholderText="See Criteria Below">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password_Id_Et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_dim"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_password_edit_Box"
            android:layout_marginTop="15dp"
            android:text="@string/repeat_password"
            android:textSize="@dimen/header_text_size"
            app:layout_constraintBottom_toTopOf="@+id/repeat_password_edit_Box"
            app:layout_constraintStart_toStartOf="parent">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_edit_Box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/repeat_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password_Id2_Et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_dim"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/error_Message_Frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/repeat_password_edit_Box"
            android:padding="20dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/error_message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/Red"
                android:textSize="@dimen/ErrorText">
            </TextView>
        </RelativeLayout>

        <TextView
            android:id="@+id/informationTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/error_Message_Frame"
            android:gravity="center"
            android:text="@string/information"
            android:textSize="@dimen/standard_text_size">
        </TextView>
    </RelativeLayout>

    <Button
        android:id="@+id/createAccountBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:text="@string/create_account"
        app:layout_constraintBottom_toTopOf="@+id/alreadyHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_content">
    </Button>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/alreadyHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountBtn" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/already_have_account"
        android:textColor="@color/Gold"
        android:fontFamily="@font/optimus_princeps_semibold"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>